--- a/public/index.html
+++ b/public/index.html
@@ -175,15 +175,27 @@
                                 <div id="qingtiancms_cool_c_middle">
                                     <ul class="sortSite" id="qingtiancms_middle_ul_1">
                                         <li class='alt'>
-                                            <h4 class="tit fl"><a href="/htmls/shipin/">视 频</a></h4>
+                                            <h4 class="tit fl"><a href="#">视 频</a></h4>
                                             <em><a  href="http://www.iqiyi.com/" >爱奇艺高清</a></em>
                                             <em><a  href="http://www.youku.com/"  >优酷网</a></em>
                                             <em><a  href="http://www.letv.com/" >乐视网</a></em>
                                             <em><a  href="http://www.kankan.com/" >迅雷看看</a></em>
                                             <em><a  href="http://tv.sohu.com/" >搜狐视频</a></em>
-                                            <em><a  href="http://www.tudou.com/" >土豆网</a></em>   
+                                            <em><a  href="http://www.tudou.com/" >土豆网</a></em>     
                                             <em><a  href="http://v.qq.com/" >腾讯视频</a></em>   
-                                                                                 </li>
+                                            <em><a  href="http://www.acfun.tv/" >ACFUN</a></em>   
+                                            <em><a  href="http://www.bilibili.com/" >哔哩哔哩</a></em>   
+                                        </li>
+                                        <li class='alt'>
+                                            <h4 class="tit fl"><a href="#">直播</a></h4>
+                                            <em><a  href="https://www.douyu.com/" >斗鱼直播</a></em>
+                                            <em><a  href="http://www.panda.tv/"  >熊猫TV</a></em>
+                                            <em><a  href="http://www.huya.com/" >虎牙TV</a></em>
+                                            <em><a  href="http://www.zhanqi.tv/" >战旗TV</a></em>
+                                            <em><a  href="http://www.quanmin.tv/" >全民Tv</a></em>
+                                            <em><a  href="http://www.longzhu.com/" >龙珠直播</a></em>
+                                            <em><a  href="http://www.huomao.com/" >火猫直播</a></em>    
+                                        </li>
                                         <li class='alt'>
                                             <h4 class="tit fl"><a href="/htmls/shipin/">影 视</a></h4><em><a  href="http://chalea.com/TV/" ><font color=#FF0000>全球电视直播</font></a></em><em><a  href="http://chalea.com/htmls/dianshi/" >电视剧</a></em><em><a  href="http://hz.v.baofeng.com/" >电 影</a></em><em><a  href="http://hz.v.baofeng.com/channel/art_index.html" >综 艺</a></em><em><a  href="http://hz.v.baofeng.com/channel/ani_index.html" >动 漫</a></em><em><a  href="http://v.baidu.com/" >百度视频</a></em>                                            </li>
                                         <li class='alt'>
