update style and html

--- a/public/index.html
+++ b/public/index.html
@@ -169,6 +169,7 @@
                                     <ul class="sortSite" id="qingtiancms_middle_ul_1">
                                         <li class='alt'>
                                             <h4 class="tit fl"><a href="#">视 频</a></h4>
+                                            <div class="fldiv">
                                             <em><a  href="http://www.iqiyi.com/" >爱奇艺高清</a></em>
                                             <em><a  href="http://www.youku.com/"  >优酷网</a></em>
                                             <em><a  href="http://www.letv.com/" >乐视网</a></em>
@@ -178,6 +179,7 @@
                                             <em><a  href="http://v.qq.com/" >腾讯视频</a></em>   
                                             <em><a  href="http://www.acfun.tv/" >ACFUN</a></em>   
                                             <em><a  href="http://www.bilibili.com/" >哔哩哔哩</a></em>   
+                                            </div>
                                         </li>
                                         <li class='alt'>
                                             <h4 class="tit fl"><a href="#">直播</a></h4>
