--- a/public/index.html
+++ b/public/index.html
@@ -171,6 +171,7 @@
                                             <em><a  href="http://v.qq.com/" >腾讯视频</a></em>   
                                             <em><a  href="http://www.acfun.tv/" >ACFUN</a></em>   
                                             <em><a  href="http://www.bilibili.com/" >哔哩哔哩</a></em>   
+                                            <em><a  href="http://www.nicovideo.jp/" >NicoNico Video</a></em>   
                                             </div>
                                         </li>
                                         <li class='alt'>
@@ -182,6 +183,7 @@
                                             <em><a  href="http://www.quanmin.tv/" >全民Tv</a></em>
                                             <em><a  href="http://www.longzhu.com/" >龙珠直播</a></em>
                                             <em><a  href="http://www.huomao.com/" >火猫直播</a></em>    
+                                            <em><a  href="http://live.nicovideo.jp/" >Nico生放送</a></em>    
                                         </li>
                                        <li class='alt'>
                                             <h4 class="tit fl"><a href="#">游 戏</a></h4><em><a  href="http://www.4399.com/" >4399小游戏</a></em><em><a  href="http://www.7k7k.com/" >7k7k小游戏</a></em><em><a  href="http://www.2144.cn/" >2144小游戏</a></em><em><a  href="http://www.17173.com/" >17173</a></em><em><a  href="http://youxi.baidu.com/" >百度游戏</a></em><em><a  href="http://www.6676.com/?" >6676小游戏</a></em>                                            </li>
