--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,7 @@
                                             <li><a href="http://www.bbc.com/">英国(UK)BBC</a> </li>
                                             <li><a href="http://web.de/">德国(DE)WEB</a> </li>
                                             <li><a href="http://www.afp.com/">法国(FRA)新社</a> </li>
+                                            <li><a href="http://asahichinese-j.com/">朝日新闻中文网</a></li>
                                         </ul>
                                         <ul class="cf fmSite zz " id="use_url">
                                             <li data-id="27">
@@ -171,7 +172,7 @@
                                             <em><a  href="http://v.qq.com/" >腾讯视频</a></em>   
                                             <em><a  href="http://www.acfun.tv/" >ACFUN</a></em>   
                                             <em><a  href="http://www.bilibili.com/" >哔哩哔哩</a></em>   
-                                            <em><a  href="http://www.nicovideo.jp/" >NicoNico Video</a></em>   
+                                            <em><a  href="http://www.nicovideo.jp/" >NicoNico </a></em>   
                                             </div>
                                         </li>
                                         <li class='alt'>
