Add youtube, fix acfun

--- a/public/index.html
+++ b/public/index.html
@@ -163,6 +163,7 @@
                                         <li class='alt'>
                                             <h4 class="tit fl"><a href="#">视 频</a></h4>
                                             <div class="fldiv">
+                                            <em><a  href="http://www.youtube.com/" >YouTube</a></em>
                                             <em><a  href="http://www.iqiyi.com/" >爱奇艺高清</a></em>
                                             <em><a  href="http://www.youku.com/"  >优酷网</a></em>
                                             <em><a  href="http://www.letv.com/" >乐视网</a></em>
@@ -170,7 +171,7 @@
                                             <em><a  href="http://tv.sohu.com/" >搜狐视频</a></em>
                                             <em><a  href="http://www.tudou.com/" >土豆网</a></em>     
                                             <em><a  href="http://v.qq.com/" >腾讯视频</a></em>   
-                                            <em><a  href="http://www.acfun.tv/" >ACFUN</a></em>   
+                                            <em><a  href="http://www.acfun.cn/" >ACFUN</a></em>   
                                             <em><a  href="http://www.bilibili.com/" >哔哩哔哩</a></em>   
                                             <em><a  href="http://www.nicovideo.jp/" >NicoNico </a></em>   
                                             </div>
